Issue #18509: handle PyUnicode_Writer() error